@@ -1,3 +1,9 @@
+03 November 2007
+
+* Google IMAP has problems with naked flag lists on STORE commands (which are
+  valid). Change to enclose the flags list in brackets. Reported by Andrew
+  Pantyukhin.
+
 25 October 2007
 
 * New option, no-create, prevents fdm creating missing path components or files
@@ -754,4 +760,4 @@
   the mail was very rarely reallocated, now that the header is added it is.
 * Changed all the descriptions to static buffers and audited use of snprintf.
 
-$Id: CHANGES,v 1.177 2007-10-25 09:02:54 nicm Exp $
+$Id: CHANGES,v 1.178 2007-11-04 08:26:03 nicm Exp $
